hphp/hack/test/typecheck/array/disallow_value_inputs_for_darray.php
<?hh

function test(): void {
  dict[0];
}
